fix: fix spacing, alignment & coloring issues

--- a/styles/components/header/Basket.scss
+++ b/styles/components/header/Basket.scss
@@ -27,7 +27,7 @@
     top: 75px;
     right: calc((100vw - 320px) / 2);
     z-index: 999999;
-    color: $gray-900;
+    color: $gray-800;
     transition: all 150ms;
     @include media($xs) {
       right: calc((100vw - 420px) / 2);
